SpringBoot - 统一格式封装及高阶全局异常处理

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>redissionmaster</module>
         <module>spiCaller</module>
         <module>spiProvider</module>
+        <module>boot-validate</module>
+        <module>boot-unit-response</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
