--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>spiProvider</module>
         <module>boot-validate</module>
         <module>boot-unit-response</module>
+        <module>applicatioonBuilderDemo</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
