SpringBoot - 使用Assert校验让业务代码更简洁

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>boot-validate</module>
         <module>boot-unit-response</module>
         <module>applicatioonBuilderDemo</module>
+        <module>boot-assert</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
