SpringBoot - 优雅的实现【业务校验】高级进阶  & oshi

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <module>boot-unit-response</module>
         <module>applicatioonBuilderDemo</module>
         <module>boot-assert</module>
+        <module>boot2-buziValidator</module>
+        <module>boot-oshi</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
