SpringBoot - 自定义注解实现接口限流

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>boot-assert</module>
         <module>boot2-buziValidator</module>
         <module>boot-oshi</module>
+        <module>boot-aopRateLimit</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
