SpringBoot - 优雅的实现【异步编程】

--- a/helloboot/pom.xml
+++ b/helloboot/pom.xml
@@ -30,6 +30,12 @@
             <version>3.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.20</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/com.dameng/Dm8JdbcDriver18 -->
         <dependency>
