Spring Boot 上传文件返回进度

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>boot-aopRateLimit</module>
         <module>boot-async</module>
         <module>boot-copyObject</module>
+        <module>boot-uploadWithProgress</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
