--- a/boot-oshi/pom.xml
+++ b/boot-oshi/pom.xml
@@ -82,6 +82,12 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
